--- a/public/Aktuell - Kopie (3).html
+++ b/public/Aktuell - Kopie (3).html
@@ -30,57 +30,54 @@ font size: +7
 <left>
 <table border="0" cellspacing="0" cellpadding="0" width="100%" style="border-collapse: collapse" bordercolor="#0000">
 <tr> 
-<td align='left' width='430'><p> <font name = "Geramont" size="6" color = "#d7a200"><u><b>Aktuelles</font></b></u>
-<br><br><br><br>
-<font color = "black" size = "5" name = "Geramont">Wir haben Urlaub vom 30. Juni bis 05. Juli 2020!</font>
+<td align='left' width='330'><p> <font name = "Geramont" size="6"><u><b>Aktuelles</font></b></u>
  </td>
-<td align='left' width='200'><a href='#Trainingsplan'><font color = "black" size = "5" name = "Geramont">Trainingsplan</font></a>
-<br><br><br><br><br>
+<td align='left' width='300'><a href='#Trainingsplan'><font color = "black" size = "4" name = "Geramont">Trainingsplan</font></a>
  </td>
-<td align='left' width='200'><a href='#Terminplan'><font color = "black" size = "5" name = "Geramont">Terminplan</font></a>
-<br><br><br><br><br>
+<td align='left' width='300'><a href='#Trainingsplan'><font color = "black" size = "4" name = "Geramont">Terminplan</font></a>
  </td>
-<td align='left' width='300'><img src="Aktuelles01.jpg" width = "300"></td>
 </tr>
 </table>
-
+<br>
 												<!---Tabelle 1 Text Aktuelles--->
 
 <table border="1" cellspacing="0" cellpadding="0" width="100%" style="border-collapse: collapse" bordercolor="#0000">
-<td></td>
+ <td>
+ </td>
 </table>
 <table border="0" cellspacing="0" cellpadding="0" width="100%" style="border-collapse: collapse" bordercolor="#0000">
 <!---sichtbarer Teil--->
 <tr><!---Abstandszeile--->
-<td align='left' height='20'>  </td>
-<td align='left'></td>
+<td align='left' width='750' height='20'>  </td>
+<td align='left' width='300'></td>
 </tr><!---Ende Abstandszeile--->
 <tr>
-<td align='left'><p> <font name = "Geramont" size = "4">
-<p>
-Aufgrund der neuen Lockerungen darf nun auch wieder in gr&ouml;&szlig;eren Gruppen gearbeitet werden.<br>
-Um aber alle Abstands- und Hygienevorschriften einhalten zu k&ouml;nnen, muss die Teilnehmerzahl nat&uuml;rlich trotzdem kontrolliert werden. <br>
+<td align='left' width='850'><p> <font name = "Geramont" size = "4">
+<p>Liebe Hundefreunde,<br><br>
+aufgrund der neuen Lockerungen darf nun auch wieder in gr&ouml;&szlig;eren Gruppen gearbeitet werden.<br>
+Um aber alle Abstands- und Hygienevorschriften einhalten zu k&ouml;nnen, muss die Teilnehmerzahl nat&uuml;rlich <br>trotzdem kontrolliert werden. <br>
 Daher bitte ich euch auch weiterhin, euch f&uuml;r die Trainingsstunden <font color = "red">zuverl&auml;ssig an- bzw. abzumelden.</font> <br>
 Die vor&uuml;bergehend aufgeteilten Trainingsstunden k&ouml;nnen wieder zu den gewohnten Zeiten stattfinden. <br><br>
 Diese findet ihr wie immer im aktuellen  <a href='#Trainingsplan'><font color = "black">Trainingsplan!</font></a>
 <br><br>
 Folgende <font color = "red">Schutz- und Hygienema&szlig;nahmen</font> m&uuml;ssen nat&uuml;rlich auch weiterhin eingehalten werden:<br>
 </td>
-<!td align='left' width='300'><!img src="Aktuelles01.jpg" width = "300"><!/td>
+<td align='left' width='300'><img src="Aktuelles01.jpg" width = "300"></td>
 </tr>
 
 <tr>
-<td align='left'><p> <font name = "Geramont" size = "4"><p>
+<td align='left' width='850'><p> <font name = "Geramont" size = "4"><p>
 * Bitte haltet euch auch zu eurer eigenen Sicherheit an die Hygienema&szlig;nahmen und Abstandsregelungen. <br>
 * Bitte mit ausreichend Abstand hintereinander parken (nicht Kofferraum an Kofferraum, damit auch beim Aussteigen der Hunde der geforderte Abstand eingehalten werden kann).<br>
 * Das Tor wird ausschlie&szlig;lich vom Trainer ge&ouml;ffnet und geschlossen.<br>
 * Bei Verwendung jeglicher Trainingsutensilien der Hundeschule m&uuml;ssen vorher und nachher die H&auml;nde gereinigt und desinfiziert werden.<br>
 * Ein Desinfektionsmittelst&auml;nder befindet sich im Eingang zum Ger&auml;tekammerl.<br>
 * Bitte denkt daran, dass ihr eure eigene Mund-Nase-Bedeckung (Tuch, Schal, Maske) dabei habt.<br><br>
-<br>
-</p><br><br><br><br><br>
+Einen sch&ouml;nen Tag und bis bald!<br>
+Liebe Gr&uuml;&szlig;e,<br><br>
+Monika</p><br><br><br><br><br>
 </td>
-<!td align='left' width='300'><!/td>
+<td align='left' width='300'></td>
 </tr>
 
 </table>
@@ -211,7 +208,7 @@ Folgende <font color = "red">Schutz- und Hygienema&szlig;nahmen</font> m&uuml;ss
 
 <tr>
 <td align='left' width='150'><font name = "Geramont" size = "4"><a>&nbsp;&nbsp;9:00-10:00 Uhr</a> </font></td>
-<td align='left' width='500'><font name = "Geramont" size = "4">Longieren</font></td>
+<td align='left' width='500'><font name = "Geramont" size = "4">Gruppe gem. (Longieren)</font></td>
 </tr>
 
 
@@ -237,104 +234,6 @@ Folgende <font color = "red">Schutz- und Hygienema&szlig;nahmen</font> m&uuml;ss
 </table>
 <a href='#Top'><font color = "black">zum Seitenanfang</font></a>
 <br><br>
-
-<table border="1" cellspacing="0" cellpadding="0" width="100%" style="border-collapse: collapse" bordercolor="#0000">
- <td>
- </td>
-</table>
-
-
-<! Tabelle Terminplan>
-
-<a name="Terminplan"></a>
-<table border="0" cellspacing="0" cellpadding="2" width="100%" style="border-collapse: collapse" bordercolor="#0000">
-<!---sichtbarer Teil--->
-<tr><td colspan='2' width='200' ><br><u><b><font size='4'>Terminplan 2020</font></b></u><br></td></tr>
-<tr><!---Abstandszeile--->
- <td height = "40">
- </td>
-</tr><!---Ende Abstandszeile--->
-
-
-<tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Donnerstag, 23. Januar</font> </td>
-<td align='left' width='480'><font name = "Geramont" size = "4">Vortragsabend "orthop&aumldische Erkrankungen beim Hund und physiotherapeutische Behandlungsm&oumlglichkeiten"</font></td>
-</tr>
-<tr><!---Abstandszeile--->
-<td align='left' width='200' height='10'>  </td>
-<td align='left' width='480'></td>
-</tr><!---Ende Abstandszeile--->
-
-<tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Samstag, 7. M&aumlrz</font> </td>
-<td align='left' width='480'><font name = "Geramont" size = "4">Kein Training, da wir ausw&aumlrts auf Seminar sind</font></td>
-</tr>
-<tr><!---Abstandszeile--->
-<td align='left' width='200' height='10'>  </td>
-<td align='left' width='480'></td>
-</tr><!---Ende Abstandszeile--->
-
-<tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Mittwoch, 11. M&aumlrz - Sonntag 15. März</font> </td>
-<td align='left' width='480'><font name = "Geramont" size = "4">Erste Trainings- und Wandertage im Bayerischen Wald</font></td>
-</tr>
-<tr><!---Abstandszeile--->
-<td align='left' width='200' height='10'>  </td>
-<td align='left' width='480'></td>
-</tr><!---Ende Abstandszeile--->
-
-<tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Dienstag, 30. Juni - Sonntag, 5. Juli.</font> </td>
-<td align='left' width='480'><font name = "Geramont" size = "4">Urlaub</font></td>
-</tr>
-<tr><!---Abstandszeile--->
-<td align='left' width='200' height='10'>  </td>
-<td align='left' width='480'></td>
-</tr><!---Ende Abstandszeile--->
-
-<tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Sonntag, 8. August</font> </td>
-<td align='left' width='480'><font name = "Geramont" size = "4">Sommerfest 10 Jahre Hundefreu(n)de <font color = "red">entf&aumlllt wegen Corona</font></font></td>
-</tr>
-<tr><!---Abstandszeile--->
-<td align='left' width='200' height='10'>  </td>
-<td align='left' width='480'></td>
-</tr><!---Ende Abstandszeile--->
-
-<tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Sonnteg, 29. November (1. Advent)</font> </td>
-<td align='left' width='480'><font name = "Geramont" size = "4">Adventswanderung in Meggenthal</font></td>
-</tr>
-<tr><!---Abstandszeile--->
-<td align='left' width='200' height='10'>  </td>
-<td align='left' width='480'></td>
-</tr><!---Ende Abstandszeile--->
-
-<tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Samstag, 19. Dezember</font> </td>
-<td align='left' width='480'><font name = "Geramont" size = "4">Weihnachtsfeier</font></td>
-</tr>
-<tr><!---Abstandszeile--->
-<td align='left' width='200' height='10'>  </td>
-<td align='left' width='480'></td>
-</tr><!---Ende Abstandszeile--->
-
-<tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Sonntag, 20. Dezember - Samstag 9. Januar</font> </td>
-<td align='left' width='480'><font name = "Geramont" size = "4">Weihnachtsurlaub</font></td>
-</tr>
-<tr><!---Abstandszeile--->
-<td align='left' width='200' height='130'>  </td>
-<td align='left' width='480'></td>
-</tr><!---Ende Abstandszeile--->
-
-</table>
-<br><br>
-<br><br>
-
-<a href='#Top'><font color = "black">zum Seitenanfang</font></a>
-<br><br>
-
   </left>
 </div>
 </body>
