--- a/public/Aktuell.html
+++ b/public/Aktuell.html
@@ -275,7 +275,7 @@ Folgende <font color = "red">Schutz- und Hygienema&szlig;nahmen</font> m&uuml;ss
 </tr><!---Ende Abstandszeile--->
 
 <tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Mittwoch, 11. M&aumlrz - Sonntag 15. März</font> </td>
+<td align='left' width='200'><font name = "Geramont" size = "4">Mittwoch, 11. M&aumlrz - Sonntag 15. M&aumlrz</font> </td>
 <td align='left' width='480'><font name = "Geramont" size = "4">Erste Trainings- und Wandertage im Bayerischen Wald</font></td>
 </tr>
 <tr><!---Abstandszeile--->
