--- a/public/Aktuell.html
+++ b/public/Aktuell.html
@@ -32,7 +32,7 @@ font size: +7
 <tr> 
 <td align='left' width='430'><p> <font name = "Geramont" size="6" color = "#d7a200"><u><b>Aktuelles</font></b></u>
 <br><br><br><br>
-<font color = "black" size = "5" name = "Geramont">Wir haben Urlaub vom 30. Juni bis 05. Juli 2020!</font>
+<!--font color = "black" size = "5" name = "Geramont">Wir haben Urlaub vom 30. Juni bis 05. Juli 2020!</!--font-->
  </td>
 <td align='left' width='200'><a href='#Trainingsplan'><font color = "black" size = "5" name = "Geramont">Trainingsplan</font></a>
 <br><br><br><br><br>
@@ -151,7 +151,7 @@ Folgende <font color = "red">Schutz- und Hygienema&szlig;nahmen</font> m&uuml;ss
 
 <tr>
 <td align='left' width='150'><font name = "Geramont" size = "4">18:30-19:30 Uhr</font> </td>
-<td align='left' width='500'><font name = "Geramont" size = "4">Obedience</font></td>
+<td align='left' width='500'><font name = "Geramont" size = "4">Hoopers <font color = "blue">(vorerst feste Gruppe)</font></font></td>
 </tr>
 <tr><!---Abstandszeile--->
  <td>
@@ -196,7 +196,7 @@ Folgende <font color = "red">Schutz- und Hygienema&szlig;nahmen</font> m&uuml;ss
 
 <tr>
 <td align='left' width='150'><font name = "Geramont" size = "4">18:00-19:00 Uhr</font> </td>
-<td align='left' width='500'><font name = "Geramont" size = "4">Unterordnung/Agility (vorerst feste Gruppe)</font></td>
+<td align='left' width='500'><font name = "Geramont" size = "4">Unterordnung/Agility</font></td>
 </tr>
 
 <tr><!---Abstandszeile--->
@@ -302,7 +302,7 @@ Folgende <font color = "red">Schutz- und Hygienema&szlig;nahmen</font> m&uuml;ss
 </tr><!---Ende Abstandszeile--->
 
 <tr>
-<td align='left' width='200'><font name = "Geramont" size = "4">Sonnteg, 29. November (1. Advent)</font> </td>
+<td align='left' width='200'><font name = "Geramont" size = "4">Sonntag, 29. November (1. Advent)</font> </td>
 <td align='left' width='480'><font name = "Geramont" size = "4">Adventswanderung in Meggenthal</font></td>
 </tr>
 <tr><!---Abstandszeile--->
